[gd_scene load_steps=15 format=3 uid="uid://6yf24kgcbxr7"]

[ext_resource type="Script" uid="uid://i7emb1l3o4n2" path="res://scenes/card/card.gd" id="1_imta7"]
[ext_resource type="Resource" uid="uid://l4n7uc7rfhsq" path="res://zzz/test_card_2.tres" id="2_v07qs"]
[ext_resource type="Resource" uid="uid://c2ohd717m4u8e" path="res://heroes/witch/witch.tres" id="3_esy5w"]
[ext_resource type="StyleBox" uid="uid://1ca5n2amt2on" path="res://assets/other/card_base_stylebox.tres" id="3_s65g1"]
[ext_resource type="Texture2D" uid="uid://cwhwjxerhw8g1" path="res://assets/sprites/sludge lord boss.png" id="4_0iqnq"]
[ext_resource type="FontFile" uid="uid://c1hiyfel7mr0l" path="res://assets/other/Jersey15-Regular.ttf" id="4_g65cd"]
[ext_resource type="FontFile" uid="uid://xloy1dm05a8w" path="res://assets/other/Jersey10-Regular.ttf" id="5_2ufkr"]
[ext_resource type="Script" uid="uid://dlgrx45ya8pyj" path="res://scenes/card/card_states/card_state_machine.gd" id="6_kaf1t"]
[ext_resource type="Script" uid="uid://dsrlgbne8ryok" path="res://scenes/card/card_states/card_base_state.gd" id="7_ri62e"]
[ext_resource type="Script" uid="uid://bgqcwkyhwio2n" path="res://scenes/card/card_states/card_clicked_state.gd" id="8_v07qs"]
[ext_resource type="Script" uid="uid://b1edpw8bd0aji" path="res://scenes/card/card_states/card_dragging_state.gd" id="9_0iqnq"]
[ext_resource type="Script" uid="uid://cakep5a1nosj8" path="res://scenes/card/card_states/card_aiming_state.gd" id="10_0iqnq"]
[ext_resource type="Script" uid="uid://qwdwl6uht4g4" path="res://scenes/card/card_states/card_released_state.gd" id="10_s65g1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ufkr"]
size = Vector2(74, 106)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(75, 106)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -53.0
offset_right = 37.5
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(37, 53)
script = ExtResource("1_imta7")
card_data = ExtResource("2_v07qs")
hero_stats = ExtResource("3_esy5w")

[node name="Panel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 75.0
offset_bottom = 106.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("3_s65g1")

[node name="Cost" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
offset_left = 4.0
offset_top = 1.0
offset_right = 15.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("4_g65cd")
theme_override_font_sizes/font_size = 15
text = "2"
vertical_alignment = 1

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_top = 3.0
offset_right = -4.0
offset_bottom = 14.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("4_g65cd")
theme_override_font_sizes/font_size = 9
text = "Testing testing"
horizontal_alignment = 2

[node name="Art" type="TextureRect" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 5.0
offset_top = 17.0
offset_right = 70.0
offset_bottom = 60.0
mouse_filter = 2
texture = ExtResource("4_0iqnq")
expand_mode = 1
stretch_mode = 5

[node name="Description" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 4.0
offset_top = 65.0
offset_right = 72.0
offset_bottom = 103.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("5_2ufkr")
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[center]Gain 5 block.
Deal 3 damage to ALL enemies.[/center]"

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(37.5, 53)
shape = SubResource("RectangleShape2D_2ufkr")
debug_color = Color(0, 0.6, 0.69803923, 0)

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("6_kaf1t")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_ri62e")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_v07qs")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("9_0iqnq")
state = 2

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("10_0iqnq")
state = 3

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("10_s65g1")
state = 4

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
